Rust/tests/Programs/fail_compile/005_global_access_inside_fn.to
let g = 9
fn read_global() {
  return g
}
print read_global()
